plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    testImplementation 'org.testng:testng:7.7.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClass = 'com.jwbutler.rpg.Main'
}

tasks.named('test') {
    useTestNG()
}

// This is specifically for JEP 406, "Enhanced Switch"
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

// This is specifically for JEP 406, "Enhanced Switch"
tasks.withType(JavaExec).each {
    it.jvmArgs.add('--enable-preview')
}
